fixed 3 vehicle section to be responsive

--- a/index.html
+++ b/index.html
@@ -129,11 +129,13 @@
 		<div class="container-fluid" style="margin-top: 40px;">
 			<div class="row">
 				<div class="col-12 text-center">
-					<h6><b>JEEP® VEHICLES</b></h6>
+					<h6><b>JEEP<sub>®</sub> VEHICLES</b></h6>
 				</div>
 			</div>
 		</div>
 		<div class="container-fluid d-flex flex-wrap">
+			<div class="row px-2 pb-5">
+			<div class="col-6 col-sm-4 col-md-3 col-lg-2">
 				<a href="#" class="card card-images flex-fill text-center black-text">
 						<img class="card-img-top" src="wrangler.300.jpg" alt="Wrangler">
 						<div class="card-body">
@@ -198,40 +200,45 @@
 		</div>
 		<div class="light-grey-box">
 			<div class="container-fluid d-flex flex-wrap">
-				<a href="#" class="card flex-fill" style="margin-bottom: 20px;">
-						<img class="last-images" src="compass.1000.jpg" alt="Jeep Compass Latitude">
+				<div class="col-12 p-2 col-md-6 col-lg-4">
+					<a href="#" class="card flex-fill" style="margin-bottom: 20px;">
+							<img class="last-images" src="compass.1000.jpg" alt="Jeep Compass Latitude">
+							<div class="card-body black-background white-text">
+								<h6 class="card-title">2019 JEEP® COMPASS LATITUDE</h6>
+								<h6>Now get no monthly payments for 90 days plus an additional $500 bonus cash in addition to qualifying offers.
+								</h6>
+							</div>
+							<div class="dark-grey-box white-text text-right">
+								EXPLORE THE 2019 JEEP® COMPASS <i class="fas fa-angle-right orange-color left-space right-space"></i>
+							</div>
+					</a>
+				</div>
+				<div class="col-12 p-2 col-md-6 col-lg-4">
+					<a href="#" class="card flex-fill" style="margin-bottom:20px;">
+						<img class="last-images" src="grandcherokee.1000.jpg" alt="Grand Cherokee Laredo" />
 						<div class="card-body black-background white-text">
-							<h6 class="card-title">2019 JEEP® COMPASS LATITUDE</h6>
+							<h6 class="card-title">2019 JEEP® GRAND CHEROKEE LAREDO</h6>
 							<h6>Now get no monthly payments for 90 days plus an additional $500 bonus cash in addition to qualifying offers.
 							</h6>
 						</div>
 						<div class="dark-grey-box white-text text-right">
-							EXPLORE THE 2019 JEEP® COMPASS <i class="fas fa-angle-right orange-color left-space right-space"></i>
+							DISCOVER THE 2019 JEEP® GRAND CHEROKEE <i class="fas fa-angle-right orange-color left-space right-space"></i>
 						</div>
-				</a>
-				<a href="#" class="card flex-fill" style="margin-bottom:20px;">
-					<img class="last-images" src="grandcherokee.1000.jpg" alt="Grand Cherokee Laredo" />
-					<div class="card-body black-background white-text">
-						<h6 class="card-title">2019 JEEP® GRAND CHEROKEE LAREDO</h6>
-						<h6>Now get no monthly payments for 90 days plus an additional $500 bonus cash in addition to qualifying offers.
-						</h6>
-					</div>
-					<div class="dark-grey-box white-text text-right">
-						DISCOVER THE 2019 JEEP® GRAND CHEROKEE <i class="fas fa-angle-right orange-color left-space right-space"></i>
-					</div>
-				</a>
-				<a href="#" class="card flex-fill" style="margin-bottom:20px;">
-					<img class="last-images" src="cherokee.1000.jpg" alt="Cherokee Latitude Plus" />
-					<div class="card-body black-background white-text">
-						<h6 class="card-title">2019 JEEP® CHEROKEE LATITUDE PLUS</h6>
-						<h6>Now get no monthly payments for 90 days plus an additional $500 bonus cash in addition to qualifying offers.
-						</h6>
-					</div>
-						<div class="dark-grey-box white-text text-right">
-							DISCOVER THE 2019 JEEP® CHEROKEE <i class="fas fa-angle-right orange-color left-space right-space"></i>
+					</a>
+				</div>
+				<div class="col-12 p-2 col-md-6 col-lg-4">
+					<a href="#" class="card flex-fill" style="margin-bottom:20px;">
+						<img class="last-images" src="cherokee.1000.jpg" alt="Cherokee Latitude Plus" />
+						<div class="card-body black-background white-text">
+							<h6 class="card-title">2019 JEEP® CHEROKEE LATITUDE PLUS</h6>
+							<h6>Now get no monthly payments for 90 days plus an additional $500 bonus cash in addition to qualifying offers.
+							</h6>
 						</div>
-				</a>
-			
+							<div class="dark-grey-box white-text text-right">
+								DISCOVER THE 2019 JEEP® CHEROKEE <i class="fas fa-angle-right orange-color left-space right-space"></i>
+							</div>
+					</a>
+				</div>
 			</div>
 		</div>
 		<div class="super-light-grey-box container-fluid px-5 py-5">
