fixed card spacing for jeep vehicles

--- a/index.html
+++ b/index.html
@@ -133,70 +133,82 @@
 				</div>
 			</div>
 		</div>
-		<div class="container-fluid d-flex flex-wrap">
+		<div class="container-fluid pt-4">
 			<div class="row px-2 pb-5">
-			<div class="col-6 col-sm-4 col-md-3 col-lg-2">
-				<a href="#" class="card card-images flex-fill text-center black-text">
-						<img class="card-img-top" src="wrangler.300.jpg" alt="Wrangler">
-						<div class="card-body">
-							<h6 class="card-title">ALL-NEW WRANGLER</h6>
-							<p class="card-text msrp">
-								MSRP* STARTING AT
+				<div class="col-6 col-sm-4 col-md-3 col-lg-2">
+					<div class="card text-center black-text">
+							<img class="card-img-top" src="wrangler.300.jpg" alt="Wrangler">
+							<div class="card-body">
+								<h6 class="card-title">ALL-NEW WRANGLER</h6>
+								<p class="card-text msrp">
+									MSRP* STARTING AT
+									</p>
+									<p class="price"> $27,945
 								</p>
-								<p class="price"> $27,945
-							</p>
+							</div>
 						</div>
-				</a>
-				<a href="#" class="card card-images flex-fill text-center black-text">
-						<img class="card-img-top" src="grandcherokee.300.jpg" alt="Grand Cherokee">
-						<div class="card-body">
-							<h6 class="card-title">GRAND CHEROKEE</h6>
-							<p class="card-text msrp">
-								MSRP* STARTING AT
+				</div>
+				<div class="col-6 col-sm-4 col-md-3 col-lg-2">
+					<a href="#" class="card  flex-fill text-center black-text">
+							<img class="card-img-top" src="grandcherokee.300.jpg" alt="Grand Cherokee">
+							<div class="card-body">
+								<h6 class="card-title">GRAND CHEROKEE</h6>
+								<p class="card-text msrp">
+									MSRP* STARTING AT
+									</p>
+									<p class="price"> $31,945
 								</p>
-								<p class="price"> $31,945
-							</p>
-						</div>
-				</a>
-				<a href="#" class="card card-images flex-fill text-center black-text">
-						<img class="card-img-top" src="cherokee.300.jpg" alt="Cherokee">
-						<div class="card-body">
-							<h6 class="card-title">CHEROKEE</h6>
-							<p class="card-text msrp">
-								MSRP* STARTING AT
+							</div>
+					</a>
+				</div>
+				<div class="col-6 col-sm-4 col-md-3 col-lg-2">
+					<a href="#" class="card  flex-fill text-center black-text">
+							<img class="card-img-top" src="cherokee.300.jpg" alt="Cherokee">
+							<div class="card-body">
+								<h6 class="card-title">CHEROKEE</h6>
+								<p class="card-text msrp">
+									MSRP* STARTING AT
+									</p>
+									<p class="price"> $25,240
 								</p>
-								<p class="price"> $25,240
-							</p>
-						</div>
-				</a>
-				<a href="#" class="card card-images flex-fill text-center black-text">
-						<img class="card-img-top" src="compass.300.jpg" alt="Compass">
-						<div class="card-body">
-							<h6 class="card-title">COMPASS</h6>
-							<p class="card-text msrp">
-								MSRP* STARTING AT
+							</div>
+					</a>
+				</div>
+				<div class="col-6 col-sm-4 col-md-3 col-lg-2">
+					<a href="#" class="card flex-fill text-center black-text">
+							<img class="card-img-top" src="compass.300.jpg" alt="Compass">
+							<div class="card-body">
+								<h6 class="card-title">COMPASS</h6>
+								<p class="card-text msrp">
+									MSRP* STARTING AT
+									</p>
+									<p class="price"> $21,845
 								</p>
-								<p class="price"> $21,845
-							</p>
-						</div>
-				</a>
-				<a href="#" class="card card-images flex-fill text-center black-text">
-						<img class="card-img-top" src="renegade.300.jpg" alt="Renegade">
-						<div class="card-body">
-							<h6 class="card-title">ALL-NEW WRANGLER</h6>
-							<p class="card-text msrp">
-								MSRP* STARTING AT
+							</div>
+					</a>
+				</div>
+				<div class="col-6 col-sm-4 col-md-3 col-lg-2">
+					<a href="#" class="card flex-fill text-center black-text">
+							<img class="card-img-top" src="renegade.300.jpg" alt="Renegade">
+							<div class="card-body">
+								<h6 class="card-title">RENEGADE</h6>
+								<p class="card-text msrp">
+									MSRP* STARTING AT
+									</p>
+									<p class="price"> $27,945
 								</p>
-								<p class="price"> $27,945
-							</p>
-						</div>
-				</a>
-				<a href="#" class="card card-images flex-fill text-center black-text">
-						<img class="card-img-top" src="gladiator.300.jpg" alt="All-New Gladiator">
-						<div class="card-body">
-							<h6 class="card-title">ALL-NEW GLADIATOR COMING SPRING 2019</h6>
-						</div>
-				</a>
+							</div>
+					</a>
+				</div>
+				<div class="col-6 col-sm-4 col-md-3 col-lg-2">
+					<a href="#" class="card flex-fill text-center black-text">
+							<img class="card-img-top" src="gladiator.300.jpg" alt="All-New Gladiator">
+							<div class="card-body">
+								<h6 class="card-title">ALL-NEW GLADIATOR COMING SPRING 2019</h6>
+							</div>
+					</a>
+				</div>
+			</div>
 		</div>
 		<div class="light-grey-box">
 			<div class="container-fluid d-flex flex-wrap">
