--- a/index.html
+++ b/index.html
@@ -88,34 +88,30 @@
 		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 			<div class="carousel-inner" role="listbox">
 				<div class="carousel-item active">
-						<img class="d-block w-100" src="first-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="First slide" />
-						<div class="absolute">
-							<div class="carousel-content">
-								<p>testing for text overlay</p>
-							</div>
-						</div>	
+					<img class="d-block w-100 d-md-none d-lg-none d-xl-none" src="carousel_1_mobile.jpg" alt="First slide" />
+					<img class="d-block w-100 d-xl-none d-none d-lg-none" src="carousel_1_tablet.jpg" alt="First slide" />
+					<img class="d-block w-100 d-none d-sm-none d-lg-block" src="carousel_1_desktop.jpg" alt="First slide" />
+					<div class="absolute">
+						<div class="carousel-content">
+							<p>testing for text overlay</p>
+						</div>
+					</div>	
 				</div>
 				<div class="carousel-item">
-						<img class="d-block w-100" src="second-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="Second slide" />
-						<div class="absolute-image">
-							<div class="carousel-content">
-								<img src="motortrend.small.png" />
-							</div>
-						</div>
-						<div class="absolute-text text-center">
-								<p class="white-text" style="margin-bottom: 0px;"><b>Now get the award-winning All-NEW 2019 Jeep® Wrangler 4-DOOR Sport for $269/month for 48 months</b></p>
-								<p class="white-text" style="font-size: 10px;"><b>$3,695 Due at lease signing. No security deposit required.</b></p>
-								<a href="#" class="orange-box black-text" style="padding: 14px 25px;">VIEW THE 2019 WRANGLER <i class="fas fa-angle-up"></i> </a>
-							</div>
+						<img class="d-block w-100 d-md-none d-lg-none d-xl-none" src="carousel_2_mobile.jpg" alt="Second slide" />
+						<img class="d-block w-100 d-xl-none d-none d-lg-none" src="carousel_2_tablet.jpg" alt="Second slide" />
+						<img class="d-block w-100 d-none d-sm-none d-lg-block" src="carousel_2_desktop.jpg" alt="Second slide" />
+					<div class="absolute-image">
+						<div class="carousel-content">
+							<img src="motortrend.small.png" />
 						</div>
 					</div>
+					<div class="absolute-text text-center">
+						<p class="white-text" style="margin-bottom: 0px;"><b>Now get the award-winning All-NEW 2019 Jeep® Wrangler 4-DOOR Sport for $269/month for 48 months</b></p>
+						<p class="white-text" style="font-size: 10px;"><b>$3,695 Due at lease signing. No security deposit required.</b></p>
+						<a href="#" class="orange-box black-text" style="padding: 14px 25px;">VIEW THE 2019 WRANGLER <i class="fas fa-angle-up"></i> </a>
+					</div>
 				</div>
-				<!-- <div class="carousel-item">
-					<img class="d-block w-100" src="third-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="Third slide">
-				</div>
-				<div class="carousel-item">
-					<img class="d-block w-100" src="fourth-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="Fourth slide">
-				</div> -->
 			</div>
 			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
 				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
