--- a/index.html
+++ b/index.html
@@ -91,10 +91,15 @@
 					<img class="d-block w-100 d-md-none d-lg-none d-xl-none" src="carousel_1_mobile.jpg" alt="First slide" />
 					<img class="d-block w-100 d-xl-none d-none d-lg-none" src="carousel_1_tablet.jpg" alt="First slide" />
 					<img class="d-block w-100 d-none d-sm-none d-lg-block" src="carousel_1_desktop.jpg" alt="First slide" />
-					<div class="absolute">
-						<div class="carousel-content">
-							<p>testing for text overlay</p>
+					<div class="carousel-caption slide1 d-lg-inline text-center">
+						<div class="font-weight-bold m-2">NOW GET</div>
+							<div class="mt-3 justify-content-center d-flex">
+							<div class="font-weight-bold">NO MONTHLY <br> PAYMENT FOR <br> 90 DAYS</div>
+							<div class="line-height1-5 mx-5">|<br>PLUS <br>|</div>	
+							<div class="font-weight-bold">AN ADDITIONAL <br> $500 <br> BONUS CASH</div>
 						</div>
+						<div class="font-14px m-2">ON BEST-SELLING JEEP<sub>®</sub> VEHICLES</div>
+                        <button type="button" class="btn px-4 py-2 m-3 btn-warning">VIEW INCENTIVES AND OFFERS</button>
 					</div>	
 				</div>
 				<div class="carousel-item">
