--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 			<div class="carousel-inner" role="listbox">
 				<div class="carousel-item active">
-					<img class="d-block w-100 d-md-none d-lg-none d-xl-none" src="carousel_1_mobile.jpg" alt="First slide" />
-					<img class="d-block w-100 d-xl-none d-none d-lg-none" src="carousel_1_tablet.jpg" alt="First slide" />
-					<img class="d-block w-100 d-none d-sm-none d-lg-block" src="carousel_1_desktop.jpg" alt="First slide" />
+					<img class="d-block w-100 d-md-none d-sm-none d-lg-none d-xl-none" src="carousel_1_mobile.jpg" alt="First slide" />
+					<img class="w-100 d-md-block d-xl-none d-none d-lg-none" src="carousel_1_tablet.jpg" alt="First slide" />
+					<img class="w-100 d-none d-sm-none d-lg-block" src="carousel_1_desktop.jpg" alt="First slide" />
 					<div class="carousel-caption slide1 d-lg-inline text-center">
 						<div class="font-weight-bold m-2">NOW GET</div>
 							<div class="mt-3 justify-content-center d-flex">
@@ -103,21 +103,16 @@
 					</div>	
 				</div>
 				<div class="carousel-item">
-						<img class="d-block w-100 d-md-none d-lg-none d-xl-none" src="carousel_2_mobile.jpg" alt="Second slide" />
-						<img class="d-block w-100 d-xl-none d-none d-lg-none" src="carousel_2_tablet.jpg" alt="Second slide" />
-						<img class="d-block w-100 d-none d-sm-none d-lg-block" src="carousel_2_desktop.jpg" alt="Second slide" />
-					<div class="absolute-image">
-						<div class="carousel-content">
-							<img src="motortrend.small.png" />
-						</div>
-					</div>
-					<div class="absolute-text text-center">
-						<p class="white-text" style="margin-bottom: 0px;"><b>Now get the award-winning All-NEW 2019 Jeep® Wrangler 4-DOOR Sport for $269/month for 48 months</b></p>
-						<p class="white-text" style="font-size: 10px;"><b>$3,695 Due at lease signing. No security deposit required.</b></p>
-						<a href="#" class="orange-box black-text" style="padding: 14px 25px;">VIEW THE 2019 WRANGLER <i class="fas fa-angle-up"></i> </a>
+						<img class="d-block w-100 d-md-none d-sm-none d-lg-none d-xl-none" src="carousel_2_mobile.jpg" alt="Second slide" />
+						<img class="d-md-block w-100 d-xl-none d-none d-lg-none" src="carousel_2_tablet.jpg" alt="Second slide" />
+						<img class="w-100 d-none d-sm-none d-lg-block" src="carousel_2_desktop.jpg" alt="Second slide" />
+					<div class="carousel-caption justify-content-start text-left slide2 d-lg-block">
+						<img src="motortrend.small.png" class="my-3"/>
+						<div>Now get the award-winning All-New 2019 Jeep<sub>®</sub> <br> Wrangler 4-DOOR Sport for $299/month for 48 <br> months</div>
+						<div class="font-14px">$3,599 Due at lease signing. No security deposit required.</div>
+                        <button type="button" class="btn px-4 py-2 my-3 btn-warning">VIEW THE 2019 WRANGLER</div>
 					</div>
 				</div>
-			</div>
 			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
 				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 				<span class="sr-only">Previous</span>
